# modorganizer-lootcli

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build.yml  linting.yml
include/lootcli/: lootcli.h
src/: CMakeLists.txt  SConscript  game_settings.cpp  game_settings.h  loot_cli.pro  lootthread.cpp  lootthread.h  main.cpp  pch.h  version.h  version.rc
